2006-03-09  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py: fix add of places in internal map
	* src/Editors/_EditEventRef.py: commit place properly
	* src/DataViews/_FamilyView.py: avoid reentry
	* src/DataViews/_PedigreeView.py: handle PluginUtils
	* src/DataViews/_PersonView.py: handle remove person better
	* src/Editors/_EditFamily.py: connect children up properly
	* src/PeopleModel.py: handle delete properly

2006-03-09  Alex Roitman  <shura@gramps-project.org>
	* PluginUtils: Add module with Report and Tool utils.

2006-03-09  Don Allingham  <don@gramps-project.org>
	* src/const.py.in: add use_tips variable
	* src/PeopleModel.py: use_tips to control tool tips
	* src/DataModels.py: use_tips to control tool tips

2006-03-08  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_FamilyView.py: fix spacing
	* src/Editors/_EditPrimary.py: make sure object is valid before
	compare
	* src/GenericFilter.py: remove print
	* src/Editors/_EditFamily.py: fix family selection

2006-03-08  Alex Roitman  <shura@gramps-project.org>
	* src/Editors/_EditFamily.py: Use tuple relations.
	* src/GramspDb/_GrampsBSDDB.py: Minor fixes.

2006-03-08  Don Allingham  <don@gramps-project.org>
	* src/GramspDb/_GrampsBSDDB.py: make txn support optional via UseTXN

2006-03-07  Don Allingham  <don@gramps-project.org>
	* src/AddMedia.py: remove WindowsUtils dependency
	* src/WindowUtils.py: remove

2006-03-07  Alex Roitman  <shura@gramps-project.org>
	* src/DateHadnler: Move all date parsers/displayers into new
	directory.

2006-03-07  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_FamilyView.py: connect up to signals correctly
	* src/Editors/_EditFamily.py: connect family members to a new family
	correctly.

2006-03-06  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_FamilyView.py: put the person in the correct spot
	when adding a new family
	* src/DataViews/_PersonView.py: remove DataFilter