@@ -1,4 +1,5 @@
 2006-03-09  Don Allingham  <don@gramps-project.org>
+	* src/AddMedia.py: avoid double commit
 	* src/GrampsDb/_GrampsDbBase.py: fix add of places in internal map
 	* src/Editors/_EditEventRef.py: commit place properly
 	* src/DataViews/_FamilyView.py: avoid reentry
